--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,14 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +16,36 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+:root {
+  --primary: #d32f2f;
+  --primaryLight: #ff5f52;
+  --primaryDark: #8e0000;
+  --primaryBackground: #ffefee;
+  --green: rgb(23, 191, 99);
+  --light: #f2f2f2;
+  --lightGrey: rgb(230, 236, 240);
+  --darkGrey: rgba(0, 0, 0, 0.6);
+  --grey: rgb(101, 119, 134);
+  --greyButtonText: rgba(0, 0, 0, 0.34);
+  --dark: #424242;
+  --spacing: 15px;
+  --borderRadius: 4px;
+}
+
+input,
+button {
+  border: none;
+  outline: none;
+}
+
+button {
+  cursor: pointer;
 }
