gui-integration-init

--- a/client/src/pages/auth/Auth.css
+++ b/client/src/pages/auth/Auth.css
@@ -6,7 +6,8 @@
     color: var(--dark);
 }
 
-.loginFooter {
+.loginFooter,
+.registerFooter {
     display: flex;
     justify-content: space-between;
 }
