--- a/client/src/shared/components/button/Button.css
+++ b/client/src/shared/components/button/Button.css
@@ -6,12 +6,26 @@
     font-size: 16px;
     font-weight: 600;
     background-color: var(--primary);
-    transition: background-color 0.2s ease-out;
-    box-shadow: 1px 1px 1px var(--dark);
+    transition: all 0.2s ease-out;
+    box-shadow: var(--buttonBoxShadow);
 }
 
 .genericButton:hover {
     background-color: var(--primaryDark);
+}
+
+.genericButton:active:not(:disabled) {
+    box-shadow: 0px 0px 0px var(--dark);
+    transform: scale(0.98);
+}
+
+.genericButton.secondary {
+    background-color: var(--light);
+    color: var(--dark);
+}
+
+.genericButton.secondary:hover {
+    background-color: var(--lightGrey);
 }
 
 .genericButton:disabled {
