--- a/client/src/shared/components/modal/Modal.css
+++ b/client/src/shared/components/modal/Modal.css
@@ -24,9 +24,8 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: var(--lightGrey);
     width: 500px;
-    height: 500px;
     opacity: 0;
     visibility: hidden;
     z-index: 3;
