communication-list-complete

--- a/client/src/pages/dashboard/appbar/Appbar.css
+++ b/client/src/pages/dashboard/appbar/Appbar.css
@@ -2,3 +2,8 @@
     height: 48px;
     background-color: var(--lightGrey);
 }
+
+.appbarContainer .logoutBtn {
+  padding: 10px;
+  font-size: 14px;
+}
