--- a/client/src/pages/dashboard/appbar/Appbar.css
+++ b/client/src/pages/dashboard/appbar/Appbar.css
@@ -1,6 +1,10 @@
 .dashboardContainer .chatContainer .appbarContainer {
     height: 48px;
     background-color: var(--lightGrey);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 var(--spacing);
 }
 
 .appbarContainer .logoutBtn {
