--- a/client/src/pages/dashboard/messengerContent/MessengerContent.css
+++ b/client/src/pages/dashboard/messengerContent/MessengerContent.css
@@ -1,3 +1,15 @@
+.messageContainer {
+    flex: 1;
+    overflow-y: hidden;
+}
+
+.welcomeMessage {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .messengerContent {
     display: flex;
     flex-direction: column;
