--- a/client/src/pages/dashboard/conversationSidebar/ConversationSidebar.css
+++ b/client/src/pages/dashboard/conversationSidebar/ConversationSidebar.css
@@ -26,4 +26,6 @@
 
 .conversationSidebarContainer .userList section {
     flex: 1;
+    overflow-y: scroll;
+    box-shadow: inset 0px -10px 11px -5px var(--primaryDark);
 }
