--- a/client/src/pages/dashboard/groupSidebar/GroupSidebar.css
+++ b/client/src/pages/dashboard/groupSidebar/GroupSidebar.css
@@ -14,6 +14,7 @@
     margin: var(--spacing) auto 0;
     box-shadow: var(--buttonBoxShadow);
     transition: all 0.2s ease-out;
+    font-size: 24px;
 }
 
 .groupSidebarContainer .sidebarButton:active {
