--- a/client/src/pages/dashboard/messageCompose/MessageCompose.css
+++ b/client/src/pages/dashboard/messageCompose/MessageCompose.css
@@ -1,4 +1,5 @@
 .messageComposeContainer {
+    display: flex;
     box-shadow: 0px 0px 10px var(--grey);
 }
 
@@ -9,4 +10,9 @@
 .messageComposeContainer .inputWrapper input {
     margin: unset;
     height: 50px;
+}
+
+.messageComposeContainer .genericButton {
+    border-radius: unset;
+    padding: 0 30px;
 }
